--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6">
-                        <h3 class="mb-3 display-4">Novedades</h3>
+                        <h3 class="my-5 display-4">Novedades</h3>
                     </div>
                     <div class="col-6 text-right">
                         <a class="btn btn-primary mb-3 mr-1" href="#carouselDestacado" role="button"
