--- a/ninos.html
+++ b/ninos.html
@@ -97,6 +97,103 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="pt-5 pb-5">
+            <!-- PlaceHolder Productos -->
+            <div class="container">
+                <h2 class="display-4 my-4">Mujeres</h2>
+                <div class="row d-flex equal">
+                    <div class="  col-md-4 mb-4">
+                        <div class="card h-100 border-0">
+                            <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
+                            <div class="card-body text-center">
+                                <h4 class="card-title">
+                                    <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                </h4>
+                                <h5 class="card-price medium text-warning">
+                                    <i>
+                                        $999</i>
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-md-4 mb-4">
+                        <div class="card h-100 border-0">
+                            <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
+                            <div class="card-body text-center">
+                                <h4 class="card-title">
+                                    <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                </h4>
+                                <h5 class="card-price medium text-warning">
+                                    <i>
+                                        $999</i>
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-md-4 mb-4">
+                        <div class="card h-100 border-0">
+                            <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
+                            <div class="card-body text-center">
+                                <h4 class="card-title">
+                                    <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                </h4>
+                                <h5 class="card-price medium text-warning">
+                                    <i>
+                                        $999</i>
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex equal">
+                    <div class="  col-md-4 mb-4">
+                        <div class="card h-100 border-0">
+                            <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
+                            <div class="card-body text-center">
+                                <h4 class="card-title">
+                                    <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                </h4>
+                                <h5 class="card-price medium text-warning">
+                                    <i>
+                                        $999</i>
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-md-4 mb-4">
+                        <div class="card h-100 border-0">
+                            <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
+                            <div class="card-body text-center">
+                                <h4 class="card-title">
+                                    <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                </h4>
+                                <h5 class="card-price medium text-warning">
+                                    <i>
+                                        $999</i>
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-md-4 mb-4">
+                        <div class="card h-100 border-0">
+                            <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
+                            <div class="card-body text-center">
+                                <h4 class="card-title">
+                                    <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                </h4>
+                                <h5 class="card-price medium text-warning">
+                                    <i>
+                                        $999</i>
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </section>
+    </main>
 
 
     <!-- Aquí va el footer -->
