--- a/carro.html
+++ b/carro.html
@@ -65,7 +65,7 @@
                             <a class="dropdown-item" href="#">Item 2</a>
                             <a class="dropdown-item" href="#">Item 3</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Ver carro</a>
+                            <a class="dropdown-item" href="carro.html"><small>Carro</small></a>
                         </div>
                     </li>
                 </ul>
@@ -102,15 +102,15 @@
             <div class="container">
               <div class="row w-100">
                   <div class="col-lg-12 col-md-12 col-12">
-                      <h3 class="display-5 mb-2 text-center">Shopping Cart</h3>
+                      <h3 class="display-5 mb-2 text-center">Carro de Compra</h3>
                       <p class="mb-5 text-center">
-                          <i class="text-info font-weight-bold">3</i> items in your cart</p>
+                          <i class="text-info font-weight-bold">3</i> productos en el carro</p>
                       <table id="shoppingCart" class="table table-condensed table-responsive">
                           <thead>
                               <tr>
-                                  <th style="width:60%">Product</th>
-                                  <th style="width:12%">Price</th>
-                                  <th style="width:10%">Quantity</th>
+                                  <th style="width:60%">Producto</th>
+                                  <th style="width:12%">Precio</th>
+                                  <th style="width:10%">Cantidad</th>
                                   <th style="width:16%"></th>
                               </tr>
                           </thead>
@@ -119,15 +119,15 @@
                                   <td data-th="Product">
                                       <div class="row">
                                           <div class="col-md-3 text-left">
-                                              <img src="https://via.placeholder.com/250x250/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                              <img src="https://via.placeholder.com/250" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
                                           </div>
                                           <div class="col-md-9 text-left mt-sm-2">
-                                              <h4>Product Name</h4>
-                                              <p class="font-weight-light">Brand &amp; Name</p>
+                                              <h4>Producto</h4>
+                                              <p class="font-weight-light">Marca del producto</p>
                                           </div>
                                       </div>
                                   </td>
-                                  <td data-th="Price">$49.00</td>
+                                  <td data-th="Price">$999</td>
                                   <td data-th="Quantity">
                                       <input type="number" class="form-control form-control-lg text-center" value="1">
                                   </td>
@@ -143,74 +143,75 @@
                                   </td>
                               </tr>
                               <tr>
-                                  <td data-th="Product">
-                                      <div class="row">
-                                          <div class="col-md-3 text-left">
-                                              <img src="https://via.placeholder.com/250x250/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
-                                          </div>
-                                          <div class="col-md-9 text-left mt-sm-2">
-                                              <h4>Product Name</h4>
-                                              <p class="font-weight-light">Brand &amp; Name</p>
-                                          </div>
-                                      </div>
-                                  </td>
-                                  <td data-th="Price">$49.00</td>
-                                  <td data-th="Quantity">
-                                      <input type="number" class="form-control form-control-lg text-center" value="1">
-                                  </td>
-                                  <td class="actions" data-th="">
-                                      <div class="text-right">
-                                          <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                              <i class="fas fa-sync"></i>
-                                          </button>
-                                          <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                              <i class="fas fa-trash"></i>
-                                          </button>
-                                      </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td data-th="Product">
-                                      <div class="row">
-                                          <div class="col-md-3 text-left">
-                                              <img src="https://via.placeholder.com/250x250/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
-                                          </div>
-                                          <div class="col-md-9 text-left mt-sm-2">
-                                              <h4>Product Name</h4>
-                                              <p class="font-weight-light">Brand &amp; Name</p>
-                                          </div>
-                                      </div>
-                                  </td>
-                                  <td data-th="Price">$49.00</td>
-                                  <td data-th="Quantity">
-                                      <input type="number" class="form-control form-control-lg text-center" value="1">
-                                  </td>
-                                  <td class="actions" data-th="">
-                                      <div class="text-right">
-                                          <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                              <i class="fas fa-sync"></i>
-                                          </button>
-                                          <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                              <i class="fas fa-trash"></i>
-                                          </button>
-                                      </div>
-                                  </td>
-                              </tr>
+                                <td data-th="Product">
+                                    <div class="row">
+                                        <div class="col-md-3 text-left">
+                                            <img src="https://via.placeholder.com/250" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                        </div>
+                                        <div class="col-md-9 text-left mt-sm-2">
+                                            <h4>Producto</h4>
+                                            <p class="font-weight-light">Marca del producto</p>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td data-th="Price">$999</td>
+                                <td data-th="Quantity">
+                                    <input type="number" class="form-control form-control-lg text-center" value="1">
+                                </td>
+                                <td class="actions" data-th="">
+                                    <div class="text-right">
+                                        <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                            <i class="fas fa-sync"></i>
+                                        </button>
+                                        <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td data-th="Product">
+                                    <div class="row">
+                                        <div class="col-md-3 text-left">
+                                            <img src="https://via.placeholder.com/250" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                        </div>
+                                        <div class="col-md-9 text-left mt-sm-2">
+                                            <h4>Producto</h4>
+                                            <p class="font-weight-light">Marca del producto</p>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td data-th="Price">$999</td>
+                                <td data-th="Quantity">
+                                    <input type="number" class="form-control form-control-lg text-center" value="1">
+                                </td>
+                                <td class="actions" data-th="">
+                                    <div class="text-right">
+                                        <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                            <i class="fas fa-sync"></i>
+                                        </button>
+                                        <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                    </div>
+                                </td>
+                            </tr>
                           </tbody>
                       </table>
                       <div class="float-right text-right">
-                          <h4>Subtotal:</h4>
-                          <h1>$99.00</h1>
+                          <h4>Total Parcial:</h4>
+                          <h1>$9999</h1>
+                          <small>+ Coste de Envio: $100</small>
                       </div>
                   </div>
               </div>
               <div class="row mt-4 d-flex align-items-center">
                   <div class="col-sm-6 order-md-2 text-right">
-                      <a href="catalog.html" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Checkout</a>
+                      <a href="#" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Comprar</a>
                   </div>
                   <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-left">
-                      <a href="catalog.html">
-                          <i class="fas fa-arrow-left mr-2"></i> Continue Shopping</a>
+                      <a href="index.html">
+                          <i class="fas fa-arrow-left mr-2"></i> Continuar Comprando</a>
                   </div>
               </div>
           </div>
