--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <a class="dropdown-item" href="#">Item 2</a>
                         <a class="dropdown-item" href="#">Item 3</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Ver carro</a>
+                        <a class="dropdown-item" href="pages/carro.html"><small>Carro</small></a>
                     </div>
                 </div>
             </div>
