--- a/hombres.html
+++ b/hombres.html
@@ -36,6 +36,9 @@
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
