--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-    
+
 <!--Metadatos-->
 
 <head>
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Niños | ChangeWear</title>
+    <title>Registrar Usuario - ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)">
     <link rel="icon" href="img/cwIcon.png" type="image/png">
     <!-- FontAwesome -->
@@ -32,24 +32,43 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(actual)</span></a>
                     </li>
-                    <li class="nav-item " >
+                    <li class="nav-item">
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="hombres.html">Hombres</a>
-                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="ninos.html">Niños<span class="sr-only">(actual)</span></a>
+                        <a class="nav-link" href="hombre.html">Hombres</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ninos.html">Niños</a>
+                    </li>
+                    <!-- Botón del usuario 1 -->
+                    <li class="nav-item d-lg-none">
+                        <a class="nav-link" href="registroUsuario.html">
+                            <i class="fas fa-user"></i> Usuario
+                        </a>
+                    </li>
+                    <!-- Botón del carro de compras 1 -->
+                    <li class="nav-item dropdown d-lg-none">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            <i class="fas fa-shopping-cart"></i> Carro de compra
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Item 1</a>
+                            <a class="dropdown-item" href="#">Item 2</a>
+                            <a class="dropdown-item" href="#">Item 3</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Ver carro</a>
+                        </div>
                     </li>
                 </ul>
-                <!--Barra de busqueda -->
                 <form class="form-inline my-0 mr-0 nav-item">
                     <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar">
                     <button class="btn btn-outline-success my-1 my-md-0" type="submit"><i
@@ -79,18 +98,20 @@
         </nav>
     </header>
     <main>
+        <!-- Main -->
+
         <section class="pt-5 pb-5">
             <!-- PlaceHolder Productos -->
             <div class="container">
-                <h2 class="display-4 my-4">Niños</h2>
+                <h2 class="display-4 my-4">Mujeres</h2>
                 <div class="row d-flex equal">
-                    <div class="  col-md-4 mb-4">
+                    <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/86H640-023-1_1024.png" alt="">
+                                <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
-                                        <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                        <h5 href="#" class=" font-weight-bold text-dark text-uppercase ">Producto</h5>
                                     </h4>
                                     <h5 class="card-price medium text-warning">
                                         <i>
@@ -100,13 +121,13 @@
                             </a>
                         </div>
                     </div>
-                    <div class=" col-md-4 mb-4">
+                    <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/86H640-C87-1_1024.png" alt="">
+                                <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
-                                        <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                        <h5 href="#" class=" font-weight-bold text-dark text-uppercase ">Producto</h5>
                                     </h4>
                                     <h5 class="card-price medium text-warning">
                                         <i>
@@ -116,13 +137,29 @@
                             </a>
                         </div>
                     </div>
-                    <div class=" col-md-4 mb-4">
+                    <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/45A407-A0R-1_1024.png" alt="">
+                                <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
-                                        <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                        <h5 href="#" class=" font-weight-bold text-dark text-uppercase ">Producto</h5>
+                                    </h4>
+                                    <h5 class="card-price medium text-warning">
+                                        <i>
+                                            $999</i>
+                                    </h5>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
+                        <div class="card h-100 border-0">
+                            <a href="producto.html" class="text-decoration-none stretched-link">
+                                <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
+                                <div class="card-body text-center">
+                                    <h4 class="card-title">
+                                        <h5 href="#" class=" font-weight-bold text-dark text-uppercase ">Producto</h5>
                                     </h4>
                                     <h5 class="card-price medium text-warning">
                                         <i>
@@ -134,13 +171,13 @@
                     </div>
                 </div>
                 <div class="row d-flex equal">
-                    <div class="  col-md-4 mb-4">
+                    <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/9A0128-023-1_1024.png" alt="">
+                                <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
-                                        <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                        <h5 href="#" class=" font-weight-bold text-dark text-uppercase ">Producto</h5>
                                     </h4>
                                     <h5 class="card-price medium text-warning">
                                         <i>
@@ -150,13 +187,13 @@
                             </a>
                         </div>
                     </div>
-                    <div class=" col-md-4 mb-4">
+                    <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/ADI-FX4902-1_1024.png" alt="">
+                                <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
-                                        <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                        <h5 href="#" class=" font-weight-bold text-dark text-uppercase ">Producto</h5>
                                     </h4>
                                     <h5 class="card-price medium text-warning">
                                         <i>
@@ -166,13 +203,29 @@
                             </a>
                         </div>
                     </div>
-                    <div class=" col-md-4 mb-4">
+                    <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/CD6864-005-1_1024.png" alt="">
+                                <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
-                                        <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
+                                        <h5 href="#" class=" font-weight-bold text-dark text-uppercase ">Producto</h5>
+                                    </h4>
+                                    <h5 class="card-price medium text-warning">
+                                        <i>
+                                            $999</i>
+                                    </h5>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
+                        <div class="card h-100 border-0">
+                            <a href="producto.html" class="text-decoration-none stretched-link">
+                                <img class="card-img-top" src="https://via.placeholder.com/80" alt="">
+                                <div class="card-body text-center">
+                                    <h4 class="card-title">
+                                        <h5 href="#" class=" font-weight-bold text-dark text-uppercase ">Producto</h5>
                                     </h4>
                                     <h5 class="card-price medium text-warning">
                                         <i>
@@ -183,9 +236,12 @@
                         </div>
                     </div>
                 </div>
-            </div>            
+            </div>
+            
         </section>
+
     </main>
+
 
     <!-- Aquí va el footer -->
     <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
@@ -213,7 +269,7 @@
                     </ul>
                 </div>
             </div>
-            <hr class="footer-hr my-2 py-0"/>
+            <hr class="footer-hr my-2 py-0" />
             <div class="row">
                 <div class="col-4 text-left">
                     <i class="fab fa-twitter mx-1 text-info"></i>
@@ -233,4 +289,5 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
