--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Registrar Usuario | ChangeWear</title>
+  <title>Registrar Usuario - ChangeWear</title>
   <meta name="description" content="Sitio de venta online (Beta)">
   <link rel="icon" href="img/cwIcon.png" type="image/png">
   <!-- FontAwesome -->
@@ -36,24 +36,42 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Marca de la página -->
-      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
       <!-- Los items del Navbar -->
       <div class="collapse navbar-collapse" id="navbarTogglerMain">
         <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(actual)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="mujeres.html">Mujeres</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="hombres.html">Hombres</a>
+            <a class="nav-link" href="hombre.html">Hombres</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="ninos.html">Niños</a>
           </li>
+          <!-- Botón del usuario 1 -->
+          <li class="nav-item d-lg-none">
+            <a class="nav-link" href="registroUsuario.html">
+              <i class="fas fa-user"></i> Usuario
+            </a>
+          </li>
+          <!-- Botón del carro de compras 1 -->
+          <li class="nav-item dropdown d-lg-none">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-shopping-cart"></i> Carro de compra
+            </a>
+            <div class="dropdown-menu dropdown-menu-right">
+              <a class="dropdown-item" href="#">Item 1</a>
+              <a class="dropdown-item" href="#">Item 2</a>
+              <a class="dropdown-item" href="#">Item 3</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Ver carro</a>
+            </div>
+          </li>
         </ul>
-        <!--Barra de busqueda-->
         <form class="form-inline my-0 mr-0 nav-item">
           <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar">
           <button class="btn btn-outline-success my-1 my-md-0" type="submit"><i class="fas fa-search"></i></button>
@@ -74,7 +92,7 @@
             <a class="dropdown-item" href="#">Item 2</a>
             <a class="dropdown-item" href="#">Item 3</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="carro.html">Ver carro</a>
+            <a class="dropdown-item" href="#">Ver carro</a>
           </div>
         </div>
       </div>
